added map, not showing up

--- a/Develop/views/layouts/main.handlebars
+++ b/Develop/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Users</title>
   <link rel="stylesheet" href="/css/jass.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/leaflet.css">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
     </nav>
     {{/if}}
   </header>
-  <main class="container container-fluid mt-5">
+  <main class="container container-fluid mt-5"><link rel="stylesheet" href="stylesheets/leaflet.css">
     {{{ body }}}
   </main>
   <footer>
